# ceferino_pm

./: Makefile.am  Makefile.in  config.h.in~  configure.ac  configure~
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
data/: Makefile.in
data/ima/: Makefile.in
data/levels/: Makefile.in
data/music/: Makefile.in
data/sounds/: Makefile.in
src/: Makefile.am  Makefile.in  mundo.cc  nivel.h
